gateway/oidc-keycloak/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: http-keycloak
      protocol: TCP
    - port: 443
      targetPort: 8443
      name: https
      protocol: TCP
  selector:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
      version: v1
  template:
    metadata:
      labels:
        app: keycloak
        version: v1
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.4.6
          imagePullPolicy: IfNotPresent
          args:
            - "start-dev"
            - "--log-level=DEBUG"
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: 8443
          volumeMounts:
            - name: tls-volume
              mountPath: /etc/tls
              readOnly: true
      volumes:
        - name: tls-volume
          secret:
            secretName: keycloak-tls
